--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,9 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  ul
+    each message in messages
+      div
+        li= message.text 
+        li= message.user 
+        li= message.date
