--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@ extends layout
 
 block content
   h1= title
+  a(href="/new")= "Add your own message"
   ul
     each message in messages
       div
