--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,12 @@ ul, .message-box {
   display: grid;
 }
 
+form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 .message-box {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1.5fr 1fr;
